--- a/SOCIOS/index.html
+++ b/SOCIOS/index.html
@@ -730,7 +730,11 @@
                     loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, (max-width: 1439px) 94vw, 1278px" alt="" 
                     width="182" 
                     srcset="img/descarga.png 500w, img/descarga.png 800w, img/descarga.png 1080w, img/descarga.png 1208w" class="join_image"></div>
-                  <div id="w-node-_8b2f62c3-0b27-cc3e-9e7a-06692db80e7a-c5e7d0d0" class="join_image-wrap"><img src="images/join-02_1join-02.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, (max-width: 1439px) 94vw, 1278px" alt="The Real World system" width="604" srcset="images/join-02_1-p-500.png 500w, images/join-02_1-p-800.png 800w, images/join-02_1join-02.webp 1208w" class="join_image"></div>
+                  <div id="w-node-_8b2f62c3-0b27-cc3e-9e7a-06692db80e7a-c5e7d0d0" class="join_image-wrap">
+                    <img src="img/comunidad mmock.png" loading="lazy" 
+                    sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, (max-width: 1439px) 94vw, 1278px" 
+                    alt="The Real World system" width="604" 
+                    srcset="img/comunidad mmock.png 500w, img/comunidad mmock.png 800w, img/comunidad mmock.png 1208w" class="join_image"></div>
                   <div id="w-node-f039d170-bf3f-0cb1-344e-0d7a41805070-c5e7d0d0" class="join_content">
                     <h3 class="h3-32">Una comunidad exclusiva con personas en tu misma situación y con el mismo objetivo</h3>
                     <div class="text-size-18">Nuestra comunidad esta llena de personas igual a vos, con tus mismas ambiciones y dispuestas a darlo todo por su objetivo.</div>
