--- a/SOCIOS/index.html
+++ b/SOCIOS/index.html
@@ -235,8 +235,8 @@
                 <div>Menu</div>
               </div>
               <div style="display:none;opacity:0;-webkit-transform:translate3d(-20%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-20%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-20%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-20%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="nav_menu">
-                <a href="/index.html" class="menu_link">Home</a>
-                <a href="/sobremi/index.html" class="menu_link">Sobre mi</a>
+                <a href="../index.html" class="menu_link">Home</a>
+                <a href="../sobremi/index.html" class="menu_link">Sobre mi</a>
                 <a href="#Application" class="menu_link">Programa de socios</a>
                 <a href="#Courses" class="menu_link">Modulos del programa</a>
 
@@ -1806,10 +1806,10 @@
           <div class="padding-section-small">
             <div class="footer_component">
               <div class="footer_top">
-                <a href="#hero" class="link-block w-inline-block"><img src="images/champions-of-the-real-world-logo_1champions-of-the-real-world-logo.webp" loading="lazy" width="133" alt="" class="champions-logo"></a>
+                <a href="#hero" class="link-block w-inline-block"><img src="img/cdn.png" loading="lazy" width="133" alt="" class="champions-logo"></a>
                 <div class="w-layout-hflex footer_links">
-                  <a href="/index.html" class="footer_link">Home</a>
-                  <a href="/sobremi/index.html" class="footer_link">Mas sobre mi</a>
+                  <a href="../index.html" class="footer_link">Home</a>
+                  <a href="../sobremi/index.html" class="footer_link">Mas sobre mi</a>
                   <a href="https://www.instagram.com/matias.molinaok/" class="footer_link">Habla conmigo</a>
                 </div>
               </div>
