--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ color: currentColor;
                  <br><br>
                  <span class="bold">Descubre a detalle todo aqui</span><br></p>
               <div class="button-wrap">
-                <a href="pagina se socios" class="ct_button-primary w-inline-block">
+                <a href="SOCIOS/index.html" class="ct_button-primary w-inline-block">
                   <div class="button-text-item">QUIERO SABER MAS</div>
                 </a>
               </div>
