--- a/sobremi/index.html
+++ b/sobremi/index.html
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" href="img/matiepic.png">
 </head>
 <body>
-    <script src="/sobremi/nav-menu.js"></script>
+    <script src="../sobremi/nav-menu.js"></script>
 
     <!--
     <div class="container fullContainer noTopMargin padding20-top padding20-bottom padding40H borderSolid
