--- a/sobremi/index.html
+++ b/sobremi/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="initial-scale=1">
     <title>Matias Molina</title>
     <link rel="stylesheet" media="screen" href="estilo.css">
-    <link rel="stylesheet" href="/sobremi/menu-style.css" type="text/css"/>
+    <link rel="stylesheet" href="../sobremi/menu-style.css" type="text/css"/>
     <link rel="stylesheet" href="css/footer-style.css" type="text/css" />
-    <link rel="stylesheet" href="/sobremi/" type="text/css" />
+    <link rel="stylesheet" href="../sobremi/" type="text/css" />
     <link rel="stylesheet" href="css/Ionicons.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/v4-shims.css">
@@ -2482,7 +2482,7 @@
     </style>
  
       </script>
-      <script src="/sobremi/megamenu.js"></script>
-      <script src="/sobremi/webflow.js"></script>
+      <script src="../sobremi/megamenu.js"></script>
+      <script src="../sobremi/webflow.js"></script>
     <div id="fb-root"></div>
    
