--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ color: currentColor;
                 
                 <div class="ct-footer__div-block-12">
                   <a
-                    href="socios page"
+                    href="SOCIOS/index.html"
                     target="_blank"
                     class="ct-footer__link"
                     >SOCIOS</a
